Fix cropping of list markers in some apps
Re #40

--- a/Blitz_framework/CSS/AltStylesheets/blitz.uncommented.css
+++ b/Blitz_framework/CSS/AltStylesheets/blitz.uncommented.css
@@ -381,13 +381,19 @@ img.portrait {
 ol,
 ul {
   margin: 1.5em 0;
-  padding-left: 5%
+  padding-left: 2em
 }
 @media amzn-mobi {
   ol,
   ul {
     margin: 1em 0
   }
+}
+ol + ol,
+ol + ul,
+ul + ol,
+ul + ul {
+  padding-left: 1em
 }
 ul {
   list-style-type: disc;
