--- a/Blitz_framework/CSS/blitz.css
+++ b/Blitz_framework/CSS/blitz.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*  blitz — CSS framework for reflowable eBooks
-    Version 1.4.0 by Jiminy Panoz
-    Codename: Stop the World
+    Version 1.4.1 by Jiminy Panoz
+    Codename: Armagideon Time
     License: MIT (https://opensource.org/licenses/MIT)   */
 /* NAMESPACES */
 @namespace h "http://www.w3.org/1999/xhtml/";
@@ -458,13 +458,19 @@ img.portrait {
 ul,
 ol {
   margin: 1.5em 0;
-  padding-left: 5%;
+  padding-left: 2em;
 }
 @media amzn-mobi {
   ul,
   ol {
     margin: 1em 0;
   }
+}
+ol + ol,
+ol + ul,
+ul + ol,
+ul + ul {
+  padding-left: 1em;
 }
 ul {
   list-style-type: disc;
